[gd_scene format=3 uid="uid://cpgosix8o3jf2"]

[ext_resource type="PackedScene" uid="uid://bbvh7nr6c3ol5" path="res://menu_scenes/CharacterButton.tscn" id="1_nvctj"]
[ext_resource type="Script" uid="uid://btv5t2x7r7wv" path="res://chose_character.gd" id="1_w2yjf"]
[ext_resource type="Texture2D" uid="uid://bg5l00vr1ehcu" path="res://assets/bodies/smart.png" id="2_lgpmk"]
[ext_resource type="Texture2D" uid="uid://cn6kacrppia0b" path="res://assets/bodies/strong.png" id="3_w2yjf"]

[node name="Chose character" type="Control" unique_id=2026173682]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w2yjf")

[node name="hbox" type="HBoxContainer" parent="." unique_id=1332510680]
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CharacterFast" parent="hbox" unique_id=635891182 instance=ExtResource("1_nvctj")]
layout_mode = 2

[node name="CharacterSmart" parent="hbox" unique_id=865704582 instance=ExtResource("1_nvctj")]
layout_mode = 2
texture_normal = ExtResource("2_lgpmk")

[node name="Label" parent="hbox/CharacterSmart" index="0" unique_id=426885092]
text = "Smart"

[node name="CharacterStrong" parent="hbox" unique_id=1365028205 instance=ExtResource("1_nvctj")]
layout_mode = 2
texture_normal = ExtResource("3_w2yjf")

[node name="Label" parent="hbox/CharacterStrong" index="0" unique_id=426885092]
text = "Strong"

[connection signal="pressed" from="hbox/CharacterFast" to="." method="_on_character_fast_pressed"]
[connection signal="pressed" from="hbox/CharacterSmart" to="." method="_on_character_smart_pressed"]
[connection signal="pressed" from="hbox/CharacterStrong" to="." method="_on_character_strong_pressed"]

[editable path="hbox/CharacterSmart"]
[editable path="hbox/CharacterStrong"]
