extends Control
class_name chose_character

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.
	

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_character_fast_pressed() -> void:

	pass # Replace with function body.


func _on_character_smart_pressed() -> void:
	pass # Replace with function body.


func _on_character_strong_pressed() -> void:
	pass # Replace with function body.
